--- a/cdn/index_cdn.html
+++ b/cdn/index_cdn.html
@@ -1,17 +1,22 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>test</title>
+        <title>Vue tui editor</title>
     </head>
     <body>
         <div id="app">
-            <h1>TEST</h1>
+            <tui-editor value="hi"/>
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://uicdn.toast.com/toast-ui.vue-editor/latest/vue-editor.js"></script>
     <script type="text/javascript">
         new Vue({
-            el: '#app'
+            el: '#app',
+            components: {
+                'tui-editor': toastui.Editor,
+                'tui-viewer': toastui.EditorViewer
+            }
         });
     </script>
 </html>
