fix: change component in the cdn test html

--- a/cdn/index_cdn.html
+++ b/cdn/index_cdn.html
@@ -41,7 +41,7 @@
         new Vue({
             el: '#app',
             components: {
-                'chart-line': toastui.chartLine
+                'chart-line': toastui.lineChart
             }
         });
     </script>
