--- a/cdn/index_cdn.html
+++ b/cdn/index_cdn.html
@@ -11,7 +11,7 @@
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="../node_modules/@toast-ui/vue-chart/dist/vue-chart.js"></script>
+    <script src="https://uicdn.toast.com/toast-ui.vue-chart/latest/vue-chart.js"></script>
     <script type="text/javascript">
         var data = {
             categories: ['01/01/2016', '02/01/2016', '03/01/2016', '04/01/2016', '05/01/2016', '06/01/2016', '07/01/2016', '08/01/2016', '09/01/2016', '10/01/2016', '11/01/2016', '12/01/2016'],
