--- a/cdn/index_cdn.html
+++ b/cdn/index_cdn.html
@@ -5,13 +5,26 @@
     </head>
     <body>
         <div id="app">
-            <h1>TEST</h1>
+            <cal view="month"></cal>
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script
+    src="https://code.jquery.com/jquery-1.12.4.min.js"
+    integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+    crossorigin="anonymous"></script>
+    <script src="https://uicdn.toast.com/tui.code-snippet/latest/tui-code-snippet.js"></script>
+    <script src="https://uicdn.toast.com/tui.time-picker/latest/tui-time-picker.js"></script>
+    <script src="https://uicdn.toast.com/tui.date-picker/latest/tui-date-picker.js"></script>
+    <script src="https://uicdn.toast.com/tui-calendar/latest/tui-calendar.js"></script>
+    <script src="https://uicdn.toast.com/toast-ui.vue-calendar/latest/toastui-vue-calendar.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://uicdn.toast.com/tui-calendar/latest/tui-calendar.css" />
     <script type="text/javascript">
         new Vue({
-            el: '#app'
+            el: '#app',
+            components: {
+                'cal': toastui.Calendar
+            }
         });
     </script>
 </html>
