update vue tui grid to v1.0.1

--- a/cdn/index_cdn.html
+++ b/cdn/index_cdn.html
@@ -8,7 +8,18 @@
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-    <script src="https://uicdn.toast.com/toast-ui.vue-grid/latest/vue-grid.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-1.12.4.min.js"
+    integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
+    crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.3.3/backbone.js"></script>
+    <script src="https://uicdn.toast.com/tui.code-snippet/latest/tui-code-snippet.js"></script>
+    <script src="https://uicdn.toast.com/tui.date-picker/latest/tui-date-picker.js"></script>
+    <script src="https://uicdn.toast.com/tui.pagination/latest/tui-pagination.js"></script>
+    <script src="https://uicdn.toast.com/tui-grid/latest/tui-grid.js"></script>
+    <script src="https://uicdn.toast.com/toast-ui.vue-grid/latest/toastui-vue-grid.js"></script>
+    <link rel="stylesheet" href="https://uicdn.toast.com/tui-grid/latest/tui-grid.css" />
     <script type="text/javascript">
         const rows = [ // for rowData prop
             {
